--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://keycloak.szut.dev/a
 springdoc.swagger-ui.path=swagger
 springdoc.swagger-ui.try-it-out-enabled=true
 
+spring.main.allow-bean-definition-overriding=true
